--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "lwip",
-  "version": "0.0.9",
+  "name": "antoinepairet-lwip",
+  "version": "0.0.10",
   "main": "index.js",
   "dependencies": {
     "async": "^2.0.0-rc.5",
     "bindings": "^1.2.1",
     "decree": "0.0.6",
-    "nan": "^2.3.2"
+    "nan": "^2.3.2",
+    "prebuild-install": "^2.1.1"
   },
   "scripts": {
     "install": "node-gyp rebuild",
@@ -29,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/EyalAr/lwip.git"
+    "url": "https://github.com/antoinepairet/lwip.git"
   },
   "keywords": [
     "image",
