--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antoinepairet-lwip",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "main": "index.js",
   "dependencies": {
     "async": "^2.0.0-rc.5",
@@ -10,7 +10,7 @@
     "prebuild-install": "^2.1.1"
   },
   "scripts": {
-    "install": "node-gyp rebuild",
+    "install": "prebuild-install || node-gyp rebuild",
     "test": "./node_modules/.bin/mocha --opts tests/mocha.opts tests",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --opts tests/mocha.opts tests",
     "travis": "./node_modules/.bin/istanbul cover --report lcovonly ./node_modules/.bin/_mocha -- --opts tests/mocha.opts --bail tests && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
