--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "antoinepairet-lwip",
-  "version": "0.0.11",
+  "name": "lwip",
+  "version": "0.0.13",
   "main": "index.js",
   "dependencies": {
     "async": "^2.0.0-rc.5",
     "bindings": "^1.2.1",
     "decree": "0.0.6",
     "nan": "^2.3.2",
-    "prebuild-install": "^2.1.1"
+    "prebuild-install": "https://github.com/antoinepairet/prebuild-install#master",
+    "prebublish": "npmignore"
   },
   "scripts": {
     "install": "prebuild-install || node-gyp rebuild",
